# M1_T-1000

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  STM32H573VITX_FLASH.ld  monstatek-companion.py
.kiro/specs/universal-remote/: .config.kiro  design.md  requirements.md  tasks.md
Core/Inc/: FreeRTOSConfig.h
Core/Src/: app_freertos.c  main.c  stm32h5xx_hal_msp.c
Esp_spi_at/examples/at_spi_master/spi/stm32/main/: esp_app_main.c  esp_app_main.h  esp_at_list.h
FatFs/: ffconf.h
NFC/NFC_drv/legacy/: mfc_crypto1.c  mfkey32.c  mfkey32.h  nfc_driver.c  nfc_poller.c  nfc_poller.h  nfc_read_progress.h
USB/Class/CDC/Src/: usbd_cdc_if.c
cmake/m1_01/: CMakeLists.txt
docs/: IR_TX_AUDIT.md
docs/superpowers/plans/: 2026-07-07-universal-remote-tv-bruteforce.md  2026-07-10-universal-ac-bruteforce.md
docs/superpowers/specs/: 2026-07-07-universal-remote-tv-bruteforce-design.md  2026-07-10-universal-ac-bruteforce-design.md
documentation/: # Building Both Firmwares  custom_remotes.md  please_wait_box.md  subghz_rssi_bar.md  universal_remotes.md
ir_database/: README.txt
ir_database/Bluray/: Samsung_Bluray.ir  Sony_Bluray.ir
ir_database/LEDs/: RGB_24key.ir
ir_database/Monitor/: Universal_Monitor.ir
ir_database/Streaming/: Apple_TV.ir  Roku.ir
ir_database/Universal/: ac.ir  audio.ir  projector.ir  tv.ir
lfrfid/: lfrfid_hal.c  t5577.c
m1_csrc/: app_clock.c  app_dab_timer.c  app_dvd_logo.c  app_esp32_link.c  app_file_tools.c  app_hex_viewer.c  app_rgb_backlight.c  app_stock_backlight.c  app_system_dashboard.c  flipper_file.c  flipper_file.h  flipper_ir.c  flipper_ir.h  game_2048.c  m1_badbt.c  m1_badusb.c  m1_bt.c  m1_bt.h  m1_builtin_apps.h  m1_buzzer.c  m1_card_list_layout.c  m1_card_list_layout.h  m1_diag.c  m1_diag.h  m1_display.c  m1_display.h  m1_display_data.c  m1_esp32_fw_update.c  m1_esp32_fw_update.h  m1_esp32_hal.c  m1_fw_update.c  m1_fw_update_bl.c  m1_fw_update_bl.h  m1_games.h  m1_gpio.c  m1_gpio.h  m1_infrared.c  m1_infrared.h  m1_int_hdl.c  m1_ir_custom.c  (+41 more)
sdcard/NFC/system/: mf_classic_dict.nfc
tools/: build_universal_ir.py  scale_device_icon.py  scale_menu_icons.py  test_build_universal_ir.py
tools/host_test/: .gitignore  ff.h  ff_shim.c  irmp.h  irsnd_host.c  run_mfc_crypto1_test.sh  run_mfc_dict_test.sh  run_mfc_sak_layout_test.sh  run_msgbox_tests.sh  run_nfc_progress_test.sh  run_tests.sh  test_flipper_ir.c  test_ir_tx_frames.c  test_mfc_crypto1.c  test_mfc_dict.c  test_mfc_sak_layout.c  test_msgbox.c  test_nfc_read_progress.c  test_subghz_rssi.c  test_uremote_bf.c  validate.sh  validate_ir.c
tools/host_test/stubs/: hal_stub.c  hal_stub.h  logger.h  m1_infrared.h  main.h  rfal_nfc.h  rfal_rf.h
tools/host_test/test_please_wait_box/: run.sh  test_please_wait_box.c
tools/host_test/test_remotes_ui/: run.sh  test_remotes_ui.c
tools/host_test/test_uremote_panel/: run.sh  test_uremote_panel.c
