# See COPYING.txt for license details.

cmake_minimum_required(VERSION 3.22)

project(m1_01)
add_library(m1_01 INTERFACE)

# Enable CMake support for ASM and C languages
enable_language(C ASM)

target_compile_definitions(m1_01 INTERFACE 
	USE_HAL_DRIVER 
	STM32H573xx
    STM32_THREAD_SAFE_STRATEGY=4
    $<$<CONFIG:Debug>:DEBUG>
)

target_include_directories(m1_01 INTERFACE
    ../../Core/Inc
    ../../Drivers/STM32H5xx_HAL_Driver/Inc
    ../../Drivers/STM32H5xx_HAL_Driver/Inc/Legacy
    ../../Drivers/CMSIS/Device/ST/STM32H5xx/Include
    ../../Drivers/CMSIS/Include
    ../../Core/ThreadSafe
    ../../Middlewares/FreeRTOS/Source/include/
    ../../Middlewares/FreeRTOS/Source/portable/GCC/ARM_CM33_NTZ/non_secure/
    ../../Middlewares/FreeRTOS/Source/CMSIS_RTOS_V2/
    ../../Middlewares/CMSIS/RTOS2/Include/
    ../../Drivers/u8g2_csrc
    ../../Drivers/u8g2_cppsrc
    ../../m1_csrc
    ../../Infrared
    ../../FatFs
    ../../Sub_Ghz
    ../../Sub_Ghz/protocols
    ../../Esp32_serial_flasher/include
    ../../Esp32_serial_flasher/port
    ../../Esp32_serial_flasher/app/common
    ../../Esp32_serial_flasher/private_include
    ../../Esp_spi_at/build/include/
    ../../Esp_spi_at/esp-idf/components/esp_common/include
    ../../Esp_spi_at/esp-idf/components/esp_driver_spi/include/driver
    ../../Esp_spi_at/esp-idf/components/hal/include/hal
    ../../Esp_spi_at/esp-idf/components/log/include/hal
    ../../Esp_spi_at/esp-idf/components/soc/esp32c6/include/soc
    ../../Esp_spi_at/esp-idf/components/soc/esp32c6/register/soc
    ../../Esp_spi_at/examples/at_spi_master/spi/stm32/main
    ../../Drivers/BSP/Components/ST25R3916/
    ../../NFC
    ../../NFC/Middlewares/ST/rfal/Inc
    ../../NFC/Middlewares/ST/rfal/Src/
    ../../NFC/NFC_drv
    ../../NFC/NFC_drv/common
    ../../NFC/NFC_drv/legacy
    ../../NFC/NFC_drv/legacy/picopass
    ../../Battery
    ../../lfrfid
    ../../USB
    ../../USB/Class/CDC/Inc
    ../../USB/Class/CDC/Src
    ../../USB/Class/CompositeBuilder/Inc
    ../../USB/Class/CompositeBuilder/Src
    ../../USB/Class/MSC/Inc
    ../../USB/Class/MSC/Src
    ../../USB/Class/HID/Inc
    ../../USB/Core/Inc
    ../../USB/Core/Src
)

target_sources(m1_01 INTERFACE
    ../../Battery/battery.c
    ../../Core/Src/FreeRTOS_CLI.c
    ../../Core/Src/app_freertos.c
    ../../Core/Src/cli_app.c
    ../../Core/Src/main.c
    ../../Core/Src/stm32h5xx_hal_msp.c
    ../../Core/Src/stm32h5xx_hal_timebase_tim.c
    ../../Core/Src/stm32h5xx_it.c
    ../../Core/Src/syscalls.c
    ../../Core/Src/sysmem.c
    ../../Core/Src/system_stm32h5xx.c
    ../../Core/Startup/startup_stm32h573vitx.s
    #../../Core/ThreadSafe/newlib_lock_glue.c
    ../../Drivers/BSP/Components/ST25R3916/rfal_rfst25r3916.c
    ../../Drivers/BSP/Components/ST25R3916/st25r3916.c
    ../../Drivers/BSP/Components/ST25R3916/st25r3916_aat.c
    ../../Drivers/BSP/Components/ST25R3916/st25r3916_com.c
    ../../Drivers/BSP/Components/ST25R3916/st25r3916_irq.c
    ../../Drivers/BSP/Components/ST25R3916/st25r3916_led.c
    ../../Drivers/BSP/Components/ST25R3916/timer.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_cortex.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_crc.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_crc_ex.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_dma.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_dma_ex.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_exti.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_flash.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_flash_ex.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_gpio.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_hcd.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_i2c.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_i2c_ex.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_icache.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_iwdg.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_pcd.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_pcd_ex.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_pwr.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_pwr_ex.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_rcc.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_rcc_ex.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_rtc.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_rtc_ex.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_sd.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_sd_ex.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_spi.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_spi_ex.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_tim.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_tim_ex.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_uart.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_hal_uart_ex.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_ll_dlyb.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_ll_sdmmc.c
    ../../Drivers/STM32H5xx_HAL_Driver/Src/stm32h5xx_ll_usb.c
    ../../Drivers/u8g2_csrc/mui.c
    ../../Drivers/u8g2_csrc/mui_u8g2.c
    ../../Drivers/u8g2_csrc/u8g2_arc.c
    ../../Drivers/u8g2_csrc/u8g2_bitmap.c
    ../../Drivers/u8g2_csrc/u8g2_box.c
    ../../Drivers/u8g2_csrc/u8g2_buffer.c
    ../../Drivers/u8g2_csrc/u8g2_button.c
    ../../Drivers/u8g2_csrc/u8g2_circle.c
    ../../Drivers/u8g2_csrc/u8g2_cleardisplay.c
    ../../Drivers/u8g2_csrc/u8g2_d_memory.c
    ../../Drivers/u8g2_csrc/u8g2_d_setup.c
    ../../Drivers/u8g2_csrc/u8g2_font.c
    ../../Drivers/u8g2_csrc/u8g2_fonts.c
    ../../Drivers/u8g2_csrc/u8g2_hvline.c
    ../../Drivers/u8g2_csrc/u8g2_input_value.c
    ../../Drivers/u8g2_csrc/u8g2_intersection.c
    ../../Drivers/u8g2_csrc/u8g2_kerning.c
    ../../Drivers/u8g2_csrc/u8g2_line.c
    ../../Drivers/u8g2_csrc/u8g2_ll_hvline.c
    ../../Drivers/u8g2_csrc/u8g2_message.c
    ../../Drivers/u8g2_csrc/u8g2_polygon.c
    ../../Drivers/u8g2_csrc/u8g2_selection_list.c
    ../../Drivers/u8g2_csrc/u8g2_setup.c
    ../../Drivers/u8g2_csrc/u8log.c
    ../../Drivers/u8g2_csrc/u8log_u8g2.c
    ../../Drivers/u8g2_csrc/u8log_u8x8.c
    ../../Drivers/u8g2_csrc/u8x8_8x8.c
    ../../Drivers/u8g2_csrc/u8x8_byte.c
    ../../Drivers/u8g2_csrc/u8x8_cad.c
    ../../Drivers/u8g2_csrc/u8x8_capture.c
    ../../Drivers/u8g2_csrc/u8x8_d_a2printer.c
    ../../Drivers/u8g2_csrc/u8x8_d_ch1120.c
    ../../Drivers/u8g2_csrc/u8x8_d_gp1247ai.c
    ../../Drivers/u8g2_csrc/u8x8_d_gp1287ai.c
    ../../Drivers/u8g2_csrc/u8x8_d_gp1294ai.c
    ../../Drivers/u8g2_csrc/u8x8_d_gu800.c
    ../../Drivers/u8g2_csrc/u8x8_d_hd44102.c
    ../../Drivers/u8g2_csrc/u8x8_d_il3820_296x128.c
    ../../Drivers/u8g2_csrc/u8x8_d_ist3020.c
    ../../Drivers/u8g2_csrc/u8x8_d_ist3088.c
    ../../Drivers/u8g2_csrc/u8x8_d_ist7920.c
    ../../Drivers/u8g2_csrc/u8x8_d_ks0108.c
    ../../Drivers/u8g2_csrc/u8x8_d_lc7981.c
    ../../Drivers/u8g2_csrc/u8x8_d_ld7032_60x32.c
    ../../Drivers/u8g2_csrc/u8x8_d_ls013b7dh03.c
    ../../Drivers/u8g2_csrc/u8x8_d_max7219.c
    ../../Drivers/u8g2_csrc/u8x8_d_pcd8544_84x48.c
    ../../Drivers/u8g2_csrc/u8x8_d_pcf8812.c
    ../../Drivers/u8g2_csrc/u8x8_d_pcf8814_hx1230.c
    ../../Drivers/u8g2_csrc/u8x8_d_s1d15300.c
    ../../Drivers/u8g2_csrc/u8x8_d_s1d15721.c
    ../../Drivers/u8g2_csrc/u8x8_d_s1d15e06.c
    ../../Drivers/u8g2_csrc/u8x8_d_sbn1661.c
    ../../Drivers/u8g2_csrc/u8x8_d_sed1330.c
    ../../Drivers/u8g2_csrc/u8x8_d_sh1106_64x32.c
    ../../Drivers/u8g2_csrc/u8x8_d_sh1106_72x40.c
    ../../Drivers/u8g2_csrc/u8x8_d_sh1107.c
    ../../Drivers/u8g2_csrc/u8x8_d_sh1108.c
    ../../Drivers/u8g2_csrc/u8x8_d_sh1122.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1305.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1306_128x32.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1306_128x64_noname.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1306_2040x16.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1306_48x64.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1306_64x32.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1306_64x48.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1306_72x40.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1306_96x16.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1306_96x40.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1309.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1312.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1316.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1317.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1318.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1320.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1322.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1325.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1326.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1327.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1329.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1362.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1363.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1606_172x72.c
    ../../Drivers/u8g2_csrc/u8x8_d_ssd1607_200x200.c
    ../../Drivers/u8g2_csrc/u8x8_d_st7302.c
    ../../Drivers/u8g2_csrc/u8x8_d_st7511.c
    ../../Drivers/u8g2_csrc/u8x8_d_st75160.c
    ../../Drivers/u8g2_csrc/u8x8_d_st75161.c
    ../../Drivers/u8g2_csrc/u8x8_d_st75256.c
    ../../Drivers/u8g2_csrc/u8x8_d_st7528.c
    ../../Drivers/u8g2_csrc/u8x8_d_st75320.c
    ../../Drivers/u8g2_csrc/u8x8_d_st7539.c
    ../../Drivers/u8g2_csrc/u8x8_d_st7565.c
    ../../Drivers/u8g2_csrc/u8x8_d_st7567.c
    ../../Drivers/u8g2_csrc/u8x8_d_st7571.c
    ../../Drivers/u8g2_csrc/u8x8_d_st7586s_erc240160.c
    ../../Drivers/u8g2_csrc/u8x8_d_st7586s_jlx320160.c
    ../../Drivers/u8g2_csrc/u8x8_d_st7586s_jlx384160.c
    ../../Drivers/u8g2_csrc/u8x8_d_st7586s_md240128.c
    ../../Drivers/u8g2_csrc/u8x8_d_st7586s_s028hn118a.c
    ../../Drivers/u8g2_csrc/u8x8_d_st7586s_ymc240160.c
    ../../Drivers/u8g2_csrc/u8x8_d_st7588.c
    ../../Drivers/u8g2_csrc/u8x8_d_st7920.c
    ../../Drivers/u8g2_csrc/u8x8_d_stdio.c
    ../../Drivers/u8g2_csrc/u8x8_d_t6963.c
    ../../Drivers/u8g2_csrc/u8x8_d_uc1601.c
    ../../Drivers/u8g2_csrc/u8x8_d_uc1604.c
    ../../Drivers/u8g2_csrc/u8x8_d_uc1608.c
    ../../Drivers/u8g2_csrc/u8x8_d_uc1609.c
    ../../Drivers/u8g2_csrc/u8x8_d_uc1610.c
    ../../Drivers/u8g2_csrc/u8x8_d_uc1611.c
    ../../Drivers/u8g2_csrc/u8x8_d_uc1617.c
    ../../Drivers/u8g2_csrc/u8x8_d_uc1628.c
    ../../Drivers/u8g2_csrc/u8x8_d_uc1638.c
    ../../Drivers/u8g2_csrc/u8x8_d_uc1701_dogs102.c
    ../../Drivers/u8g2_csrc/u8x8_d_uc1701_mini12864.c
    ../../Drivers/u8g2_csrc/u8x8_debounce.c
    ../../Drivers/u8g2_csrc/u8x8_display.c
    ../../Drivers/u8g2_csrc/u8x8_fonts.c
    ../../Drivers/u8g2_csrc/u8x8_gpio.c
    ../../Drivers/u8g2_csrc/u8x8_input_value.c
    ../../Drivers/u8g2_csrc/u8x8_message.c
    ../../Drivers/u8g2_csrc/u8x8_selection_list.c
    ../../Drivers/u8g2_csrc/u8x8_setup.c
    ../../Drivers/u8g2_csrc/u8x8_string.c
    ../../Drivers/u8g2_csrc/u8x8_u16toa.c
    ../../Drivers/u8g2_csrc/u8x8_u8toa.c
    ../../Esp32_serial_flasher/app/common/app_common.c
    ../../Esp32_serial_flasher/port/stm32_port.c
    ../../Esp32_serial_flasher/src/esp_loader.c
    ../../Esp32_serial_flasher/src/esp_stubs.c
    ../../Esp32_serial_flasher/src/esp_targets.c
    ../../Esp32_serial_flasher/src/md5_hash.c
    ../../Esp32_serial_flasher/src/protocol_serial.c
    ../../Esp32_serial_flasher/src/protocol_uart.c
    ../../Esp32_serial_flasher/src/slip.c
    ../../Esp_spi_at/esp-idf/components/esp_driver_spi/src/gpspi/spi_master.c
    ../../Esp_spi_at/examples/at_spi_master/spi/stm32/main/esp_app_main.c
    ../../Esp_spi_at/examples/at_spi_master/spi/stm32/main/esp_queue.c
    ../../Esp_spi_at/examples/at_spi_master/spi/stm32/main/m1_at_response_parser.c
    ../../FatFs/diskio.c
    ../../FatFs/ff.c
    ../../FatFs/ff_gen_drv.c
    ../../FatFs/ffsystem.c
    ../../FatFs/ffsystem_baremetal.c
    ../../FatFs/ffsystem_cmsis_os.c
    ../../FatFs/ffunicode.c
    ../../Infrared/irmp.c
    ../../Infrared/irmpextlog.c
    ../../Infrared/irsnd.c
    ../../Middlewares/FreeRTOS/Source/CMSIS_RTOS_V2/cmsis_os2.c
    ../../Middlewares/FreeRTOS/Source/croutine.c
    ../../Middlewares/FreeRTOS/Source/event_groups.c
    ../../Middlewares/FreeRTOS/Source/list.c
    ../../Middlewares/FreeRTOS/Source/queue.c
    ../../Middlewares/FreeRTOS/Source/stream_buffer.c
    ../../Middlewares/FreeRTOS/Source/tasks.c
    ../../Middlewares/FreeRTOS/Source/timers.c
    ../../Middlewares/FreeRTOS/Source/portable/GCC/ARM_CM33_NTZ/non_secure/port.c
    ../../Middlewares/FreeRTOS/Source/portable/GCC/ARM_CM33_NTZ/non_secure/portasm.c
    ../../Middlewares/FreeRTOS/Source/portable/MemMang/heap_4.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_analogConfig.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_cd.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_crc.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_dpo.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_iso15693_2.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_isoDep.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_nfc.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_nfcDep.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_nfca.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_nfcb.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_nfcf.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_nfcv.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_st25tb.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_st25xv.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_t1t.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_t2t.c
    ../../NFC/Middlewares/ST/rfal/Src/rfal_t4t.c
    ../../NFC/NFC_drv/common/nfc_ctx.c
    ../../NFC/NFC_drv/common/nfc_file.c
    ../../NFC/NFC_drv/common/nfc_fileio.c
    ../../NFC/NFC_drv/common/nfc_storage.c
    ../../NFC/NFC_drv/legacy/nfc_driver.c
    ../../NFC/NFC_drv/legacy/nfc_listener.c
    ../../NFC/NFC_drv/legacy/nfc_poller.c
    ../../NFC/NFC_drv/legacy/mfc_crypto1.c
    ../../NFC/NFC_drv/legacy/mfkey32.c
    ../../NFC/NFC_drv/legacy/picopass/picopass_cipher.c
    ../../NFC/NFC_drv/legacy/picopass/picopass_poller.c
    ../../NFC/NFC_drv/legacy/picopass/picopass_listener.c
    ../../NFC/app_x-cube-nfcx.c
    ../../Sub_Ghz/datatypes_utils.c
    ../../Sub_Ghz/m1_sub_ghz_api.c
    ../../Sub_Ghz/m1_sub_ghz_decenc.c
    ../../Sub_Ghz/protocols/m1_princeton_decode.c
    ../../Sub_Ghz/protocols/m1_secplus_v2_decode.c
    ../../Sub_Ghz/protocols/m1_came_decode.c
    ../../Sub_Ghz/protocols/m1_nice_flo_decode.c
    ../../Sub_Ghz/protocols/m1_linear_decode.c
    ../../Sub_Ghz/protocols/m1_holtek_decode.c
    ../../Sub_Ghz/protocols/m1_keeloq_decode.c
    ../../Sub_Ghz/protocols/m1_oregon_v2_decode.c
    ../../Sub_Ghz/protocols/m1_acurite_decode.c
    ../../Sub_Ghz/protocols/m1_lacrosse_tx_decode.c
    ../../Sub_Ghz/protocols/m1_faac_slh_decode.c
    ../../Sub_Ghz/protocols/m1_hormann_decode.c
    ../../Sub_Ghz/protocols/m1_marantec_decode.c
    ../../Sub_Ghz/protocols/m1_somfy_telis_decode.c
    ../../Sub_Ghz/protocols/m1_starline_decode.c
    ../../Sub_Ghz/protocols/m1_gate_tx_decode.c
    ../../Sub_Ghz/protocols/m1_smc5326_decode.c
    ../../Sub_Ghz/protocols/m1_power_smart_decode.c
    ../../Sub_Ghz/protocols/m1_ido_decode.c
    ../../Sub_Ghz/protocols/m1_ansonic_decode.c
    ../../Sub_Ghz/protocols/m1_infactory_decode.c
    ../../Sub_Ghz/protocols/m1_schrader_decode.c
    ../../Sub_Ghz/protocols/m1_generic_decode.c
    ../../Sub_Ghz/protocols/m1_chamberlain_decode.c
    ../../Sub_Ghz/protocols/m1_clemsa_decode.c
    ../../Sub_Ghz/protocols/m1_doitrand_decode.c
    ../../Sub_Ghz/protocols/m1_bett_decode.c
    ../../Sub_Ghz/protocols/m1_nero_decode.c
    ../../Sub_Ghz/protocols/m1_firefly_decode.c
    ../../Sub_Ghz/protocols/m1_came_twee_decode.c
    ../../Sub_Ghz/protocols/m1_came_atomo_decode.c
    ../../Sub_Ghz/protocols/m1_nice_flor_s_decode.c
    ../../Sub_Ghz/protocols/m1_alutech_decode.c
    ../../Sub_Ghz/protocols/m1_centurion_decode.c
    ../../Sub_Ghz/protocols/m1_kinggates_decode.c
    ../../Sub_Ghz/protocols/m1_megacode_decode.c
    ../../Sub_Ghz/protocols/m1_mastercode_decode.c
    ../../Sub_Ghz/protocols/m1_chamberlain_7bit_decode.c
    ../../Sub_Ghz/protocols/m1_chamberlain_8bit_decode.c
    ../../Sub_Ghz/protocols/m1_chamberlain_9bit_decode.c
    ../../Sub_Ghz/protocols/m1_liftmaster_decode.c
    ../../Sub_Ghz/protocols/m1_dooya_decode.c
    ../../Sub_Ghz/protocols/m1_honeywell_decode.c
    ../../Sub_Ghz/protocols/m1_intertechno_decode.c
    ../../Sub_Ghz/protocols/m1_elro_decode.c
    ../../Sub_Ghz/protocols/m1_ambient_weather_decode.c
    ../../Sub_Ghz/protocols/m1_bresser_3ch_decode.c
    ../../Sub_Ghz/protocols/m1_bresser_5in1_decode.c
    ../../Sub_Ghz/protocols/m1_bresser_6in1_decode.c
    ../../Sub_Ghz/protocols/m1_tfa_dostmann_decode.c
    ../../Sub_Ghz/protocols/m1_nexus_th_decode.c
    ../../Sub_Ghz/protocols/m1_thermopro_tx2_decode.c
    ../../Sub_Ghz/protocols/m1_gt_wt03_decode.c
    ../../Sub_Ghz/protocols/m1_scher_khan_magicar_decode.c
    ../../Sub_Ghz/protocols/m1_scher_khan_logicar_decode.c
    ../../Sub_Ghz/protocols/m1_toyota_decode.c
    ../../Sub_Ghz/protocols/m1_bin_raw_decode.c
    ../../USB/Class/CDC/Src/usbd_cdc.c
    ../../USB/Class/CDC/Src/usbd_cdc_if.c
    ../../USB/Class/CompositeBuilder/Src/usbd_composite_builder.c
    ../../USB/Class/MSC/Src/usbd_msc.c
    ../../USB/Class/MSC/Src/usbd_msc_bot.c
    ../../USB/Class/MSC/Src/usbd_msc_data.c
    ../../USB/Class/MSC/Src/usbd_msc_scsi.c
    ../../USB/Class/MSC/Src/usbd_msc_storage.c
    ../../USB/Core/Src/usbd_conf.c
    ../../USB/Core/Src/usbd_core.c
    ../../USB/Core/Src/usbd_ctlreq.c
    ../../USB/Core/Src/usbd_desc.c
    ../../USB/Core/Src/usbd_ioreq.c
    ../../lfrfid/lfrfid.c
    ../../lfrfid/lfrfid_file.c
    ../../lfrfid/lfrfid_hal.c
    ../../lfrfid/lfrfid_protocol.c
    ../../lfrfid/lfrfid_protocol_em4100.c
    ../../lfrfid/lfrfid_protocol_h10301.c
    ../../lfrfid/lfrfid_protocol_hid_generic.c
    ../../lfrfid/lfrfid_protocol_indala26.c
    ../../lfrfid/lfrfid_manchester.c
    ../../lfrfid/lfrfid_protocol_awid.c
    ../../lfrfid/lfrfid_protocol_pyramid.c
    ../../lfrfid/lfrfid_protocol_paradox.c
    ../../lfrfid/lfrfid_protocol_ioprox.c
    ../../lfrfid/lfrfid_protocol_fdx_a.c
    ../../lfrfid/lfrfid_protocol_hid_ex.c
    ../../lfrfid/lfrfid_protocol_viking.c
    ../../lfrfid/lfrfid_protocol_fdx_b.c
    ../../lfrfid/lfrfid_protocol_electra.c
    ../../lfrfid/lfrfid_protocol_gallagher.c
    ../../lfrfid/lfrfid_protocol_jablotron.c
    ../../lfrfid/lfrfid_protocol_pac_stanley.c
    ../../lfrfid/lfrfid_protocol_securakey.c
    ../../lfrfid/lfrfid_protocol_gproxii.c
    ../../lfrfid/lfrfid_protocol_noralsy.c
    ../../lfrfid/lfrfid_protocol_idteck.c
    ../../lfrfid/lfrfid_protocol_keri.c
    ../../lfrfid/lfrfid_protocol_nexwatch.c
    ../../lfrfid/t5577.c
    ../../m1_csrc/res_string.c
    ../../m1_csrc/bit_util.c
    ../../m1_csrc/logger.c
    ../../m1_csrc/m1_bq25896.c
    ../../m1_csrc/m1_bq27421.c
    ../../m1_csrc/m1_bt.c
    ../../m1_csrc/m1_802154.c
    ../../m1_csrc/m1_buzzer.c
    ../../m1_csrc/m1_cli.c
    ../../m1_csrc/m1_cli_help.c
    ../../m1_csrc/m1_core_config.c
    ../../m1_csrc/m1_display.c
    ../../m1_csrc/m1_display_data.c
    ../../m1_csrc/m1_please_wait_layout.c
    ../../m1_csrc/m1_card_list_layout.c
    ../../m1_csrc/m1_msgbox_layout.c
    ../../m1_csrc/m1_esp32_fw_update.c
    ../../m1_csrc/m1_esp32_hal.c
    ../../m1_csrc/m1_diag.c
    ../../m1_csrc/m1_esp_hosted_dummy.c
    ../../m1_csrc/m1_file_browser.c
    ../../m1_csrc/m1_file_util.c
    ../../m1_csrc/m1_fusb302.c
    ../../m1_csrc/m1_fw_update.c
    ../../m1_csrc/m1_fw_update_bl.c
    ../../m1_csrc/m1_rpc.c
    ../../m1_csrc/m1_gpio.c
    ../../m1_csrc/m1_i2c.c
    ../../m1_csrc/m1_infrared.c
    ../../m1_csrc/m1_int_hdl.c
    ../../m1_csrc/m1_lcd.c
    ../../m1_csrc/m1_led_indicator.c
    ../../m1_csrc/m1_lib.c
    ../../m1_csrc/m1_log_debug.c
    ../../m1_csrc/m1_low_power.c
    ../../m1_csrc/m1_lp5814.c
    ../../m1_csrc/m1_md5_hash.c
    ../../m1_csrc/m1_menu.c
    ../../m1_csrc/m1_nfc.c
    ../../m1_csrc/m1_power_ctl.c
    ../../m1_csrc/m1_rf_spi.c
    ../../m1_csrc/m1_rfid.c
    ../../m1_csrc/m1_ring_buffer.c
    ../../m1_csrc/m1_sdcard.c
    ../../m1_csrc/m1_sdcard_man.c
    ../../m1_csrc/m1_settings.c
    ../../m1_csrc/m1_storage.c
    ../../m1_csrc/m1_sub_ghz.c
    ../../m1_csrc/m1_sys_init.c
    ../../m1_csrc/m1_system.c
    ../../m1_csrc/m1_tasks.c
    ../../m1_csrc/m1_main_menu.c
    ../../m1_csrc/m1_usb_cdc_msc.c
    ../../m1_csrc/m1_virtual_kb.c
    ../../m1_csrc/m1_watchdog.c
    ../../m1_csrc/m1_wifi.c
    ../../m1_csrc/privateprofilestring.c
    ../../m1_csrc/uiView.c
    # === Enhanced firmware: Flipper file format parsers (Phase 2) ===
    ../../m1_csrc/flipper_file.c
    ../../m1_csrc/flipper_ir.c
    ../../m1_csrc/flipper_subghz.c
    ../../m1_csrc/flipper_nfc.c
    ../../m1_csrc/flipper_rfid.c
    # === Enhanced firmware: Universal Remote + Crypto (Phase 3+5) ===
    ../../m1_csrc/m1_ir_universal.c
    ../../m1_csrc/m1_ir_custom.c
    ../../m1_csrc/m1_crypto.c
    ../../m1_csrc/m1_wifi_cred.c
    # === Enhanced firmware: Flipper integration (Phase 6) ===
    ../../m1_csrc/m1_flipper_integration.c
    # === Enhanced firmware: BadUSB (Phase 7) ===
    ../../USB/Class/HID/Src/usbd_hid.c
    ../../m1_csrc/m1_badusb.c
    ../../m1_csrc/m1_badusb_fingerprint.c
    # === Enhanced firmware: Bad-BT (Phase 8) ===
    ../../m1_csrc/m1_badbt.c
    # === Enhanced firmware: Built-in Games (Phase 9) ===
    ../../m1_csrc/m1_games.c
    ../../m1_csrc/game_snake.c
    ../../m1_csrc/game_tetris.c
    ../../m1_csrc/game_trex.c
    ../../m1_csrc/game_pong.c
    ../../m1_csrc/game_dice.c
    ../../m1_csrc/game_2048.c
    ../../m1_csrc/app_dab_timer.c
    ../../m1_csrc/app_dvd_logo.c
    ../../m1_csrc/app_system_dashboard.c
    ../../m1_csrc/app_file_tools.c
    ../../m1_csrc/app_esp32_link.c
    ../../m1_csrc/app_clock.c
    ../../m1_csrc/app_hex_viewer.c
    ../../m1_csrc/m1_rgb_backlight.c
    ../../m1_csrc/app_rgb_backlight.c
    ../../m1_csrc/app_stock_backlight.c
    # === Enhanced firmware: ELF App Loader (Phase 10) ===
    ../../m1_csrc/m1_elf_loader.c
    ../../m1_csrc/m1_app_api.c
    ../../m1_csrc/m1_app_manager.c
    ../../m1_csrc/m1_field_detect.c
)

target_link_directories(m1_01 INTERFACE
)

target_link_libraries(m1_01 INTERFACE
)

# Validate that STM32CubeMX code is compatible with C standard
if(CMAKE_C_STANDARD LESS 11)
    message(ERROR "Generated code requires C11 or higher")
endif()
